@@ -2,6 +2,7 @@
 
 	* Added a post processing hook for the language detection service
 	* Added a post processing hook for the meta data extraction service
+	* Added a post processing hook for the text extraction service
 
 2012-08-28  Ingo Renner  <ingo@typo3.org>
 
